--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-calendar": "^3.4.0",
     "react-dom": "17.0.0",
     "react-paginate": "7.1.3",
+    "react-router-dom": "^5.2.0",
     "reactstrap": "8.9.0"
   },
   "scripts": {
